fix horizontal scroll

--- a/custom_css/style.css
+++ b/custom_css/style.css
@@ -52,6 +52,11 @@
   /* Horizontal Page Settings */
 
 body {
+  /* height: 100%; <--- removed the repeat of background cover/color */
+  background-color: #333;
+}
+
+body {
   display: -ms-flexbox;
   display: flex;
   color: #fff;
